--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Narratives-of-New-Netherland-1609-1664_3161
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   editor:
     agent_name: Jameson, J. Franklin (John Franklin)
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/826
     wikipedia: http://en.wikipedia.org/wiki/J._Franklin_Jameson
 description: 'From the series: Original narratives of early American history'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3161#Narratives-of-New-Netherland-1609-1664
 gutenberg_issued: '2002-04-01'
 gutenberg_type: Text
 identifiers:
